# cpp_starter_project

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  README.org  premake5.lua  premake5.lua~  travis.yml
.github/workflows/: build_cmake.yml  clang-format-check.yml
cmake/: CodeCoverage.cmake  clang-tidy.cmake  clangformat.cmake  utils.cmake
conan/: conanbuildinfo.premake.lua  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  linux.txt  windows.txt
include/: example.hpp  pch.hpp
src/: CMakeLists.txt  example.cpp  example.hpp  main.cpp  main.cxx  pch.hpp
src/example/: CMakeLists.txt  example.cpp  example.hpp  example.test.cpp
src/test/: test.hpp
tests/: CMakeLists.txt  test.cpp  test.cxx
